k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      containers:
        - name: eureka-service
          image: joaofigueredo/eureka-service:latest
          ports:
            - containerPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imovel-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: imovel-service
  template:
    metadata:
      labels:
        app: imovel-service
    spec:
      containers:
        - name: imovel-service
          image: joaofigueredo/imovel-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: status-service
  template:
    metadata:
      labels:
        app: status-service
    spec:
      containers:
        - name: status-service
          image: joaofigueredo/status-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veiculo-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: veiculo-service
  template:
    metadata:
      labels:
        app: veiculo-service
    spec:
      containers:
        - name: veiculo-service
          image: joaofigueredo/veiculo-service:latest
          ports:
            - containerPort: 8082
