k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eureka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: eureka-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8080
    - host: eureka-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-imovel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: imovel-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imovel-service
                port:
                  number: 8080
    - host: imovel-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imovel-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-status
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: status-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-service
                port:
                  number: 8080
    - host: status-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-veiculo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: veiculo-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veiculo-service
                port:
                  number: 8080
    - host: veiculo-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veiculo-service
                port:
                  number: 8080
---
